(executables
  (names toplevel)
  (libraries
    js_of_ocaml-compiler
    js_of_ocaml-tyxml
    js_of_ocaml-toplevel
    js_of_ocaml-ppx
    js_of_ocaml-lwt
    higlo.ocaml
    ocp-indent.lib
    lwt
    ;; not used directly
    graphics
    bigarray
    zarith
    str
  )
  (flags (:standard -rectypes -linkall))
  (modes byte)
  (modules (:standard))
  (preprocess (pps js_of_ocaml-ppx))
)

(rule
  (targets export.txt)
  (action
    (run jsoo_listunits -o %{targets}
      stdlib
      graphics
      str
      lwt
      bigarray
      zarith
      js_of_ocaml
      dynlink
    )
  )
)


(rule
  (targets toplevel.js)
  (action
    (run %{bin:js_of_ocaml}
      -I %{lib:reactiveData:.}
      -I %{lib:zarith:.}
      -I .
      --export %{dep:export.txt}
      --toplevel
      
      +base/runtime.js
      +toplevel.js
      +dynlink.js
      +zarith_stubs_js/biginteger.js
      +zarith_stubs_js/runtime.js
      %{dep:toplevel.bc}
      -o %{targets}
    )
  )
)

(alias
  (name default)
  (deps toplevel.js)
)
