(executables
  (names toplevel)
  (libraries
    js_of_ocaml-compiler
    js_of_ocaml-tyxml
    js_of_ocaml-toplevel
    js_of_ocaml-ppx
    js_of_ocaml-lwt
    sedlex
    ocp-indent.lib
    lwt
    ;; not used directly
    str
    zarith
    dynlink
  )
  (flags 
    (:standard -rectypes -linkall))
  (modes byte)
  (modules (:standard))
  (js_of_ocaml
    (link_flags (:standard))
    (build_runtime_flags
    (:standard
      +base/runtime.js
      +toplevel.js
      +dynlink.js
      +zarith_stubs_js/runtime.js
      +zarith_stubs_js/biginteger.js
      ))
    (flags
    (:standard
      --toplevel))
  )
  (preprocess (pps sedlex.ppx js_of_ocaml-ppx))
)

(rule
  (targets export.txt)
  (action
    (run jsoo_listunits -o %{targets}
      stdlib
      str
      dynlink
      zarith
    )
  )
)

(rule
  (targets toplevel.js)
  (action
    (run %{bin:js_of_ocaml}
      +base/runtime.js
      +toplevel.js
      +dynlink.js
      +zarith_stubs_js/runtime.js
      +zarith_stubs_js/biginteger.js
      --export %{dep:export.txt}
      --toplevel
      --opt 3
      --enable=effects
      %{dep:toplevel.bc}
      -o %{targets}
    )
  )
)
