(executables
  (names toplevel)
  (libraries
    js_of_ocaml-compiler
    js_of_ocaml-tyxml
    js_of_ocaml-toplevel
    js_of_ocaml-ppx
    js_of_ocaml-lwt
    sedlex
    ocp-indent.lib
    lwt
    ;; not used directly
    graphics
    js_of_ocaml-lwt.graphics
    str
    zarith
    dynlink
  )
  (flags 
    (:standard -rectypes -linkall))
  (modes byte)
  (modules (:standard))
  (js_of_ocaml
    (link_flags (:standard))
    (build_runtime_flags
    (:standard
      +base/runtime.js
      +toplevel.js
      +dynlink.js
      +zarith_stubs_js/runtime.js
      +zarith_stubs_js/biginteger.js
      ))
    (flags
    (:standard
      --toplevel))
  )
  (preprocess (pps sedlex.ppx js_of_ocaml-ppx))
)

(rule
  (targets export.txt)
  (deps
    (package js_of_ocaml-ppx)
    (package js_of_ocaml)
    (package js_of_ocaml-compiler)
    (package js_of_ocaml-lwt)
    (package js_of_ocaml-tyxml)
    (package js_of_ocaml-toplevel)
  )
  (action
    (run jsoo_listunits -o %{targets}
      stdlib
      graphics
      js_of_ocaml-lwt.graphics
      js_of_ocaml-compiler.runtime
      js_of_ocaml-lwt.graphics
      js_of_ocaml-ppx.as-lib
      js_of_ocaml.deriving
      str
      dynlink
      zarith
    )
  )
)

(rule
  (targets toplevel.js)
  (action
    (run %{bin:js_of_ocaml}
      +base/runtime.js
      +toplevel.js
      +dynlink.js
      +zarith_stubs_js/runtime.js
      +zarith_stubs_js/biginteger.js
      --export %{dep:export.txt}
      --toplevel
      --opt 3
      --enable=effects
      %{dep:toplevel.bc}
      -o %{targets}
    )
  )
)
